# mineDatos-lab3

./: .gitignore  Laboratorio 3 (2).html  README.md  lab3.ipynb  pyproject.toml  requirements.txt
docs/: instructions.md
